# url-shortener

./: .gitignore  Cargo.toml  example.env
migrations/: 1.sql
src/: config.rs  main.rs  router.rs  routes.rs  utils.rs
