[package]
name = "actix-web-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
chrono = "0.4.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.30"
derive_more = "0.99.17"
log = "0.4.21"
env_logger = "0.11.3"
libsql = "0.4.0"
dotenvy = "0.15.7"
base64 = "0.22.1"
